Fix overflow of line-height on status badge

--- a/app/frontend/components/_sign-table.scss
+++ b/app/frontend/components/_sign-table.scss
@@ -132,6 +132,7 @@
     background: get-color(primary-light);
     padding: 0.25rem 0.375rem;
     border-radius: rem-calc(2);
+    line-height: 1.4;
     width: fit-content;
   }
 
